--- a/csc/code/Makefile
+++ b/csc/code/Makefile
@@ -1,7 +1,6 @@
 all: fibo.c main.c
-	gcc fibo.c -o fibo.o
-	gcc main.c -o main.o
+	gcc fibo.c -c -I ../include
+	gcc main.c -c -I ../include
 clean:
 	rm fibo.o
 	rm main.o
-
