--- a/csc/Makefile
+++ b/csc/Makefile
@@ -1,2 +1,5 @@
-all: code/fibo.c code/fibo.h
-	gcc ./code/fibo.c -o fibo
+all: code/fibo.c code/main.c
+	make -C code
+	gcc code/fibo.c code/main.c -o fibo -I include
+clean:
+	make -C code clean
