--- a/init/Makefile
+++ b/init/Makefile
@@ -1,15 +1,31 @@
-INCLUDES := -I../include
+#INCLUDES := -I../include
 
+#%.o: %.c
+#	$(CC) $(CFLAGS) $(INCLUDES) -c $<
+
+#.PHONY: clean
+
+#all: init.o main.o code_a.o code_b.o check_icode.o
+
+#clean:
+#	rm -rf *~ *.o
+
+
+#include ../include.mk
+INCLUDES := -I../include
+  
 %.o: %.c
+	$(CC) $(CFLAGS) $(INCLUDES) -c $<
+
+%.o: %.S
 	$(CC) $(CFLAGS) $(INCLUDES) -c $<
 
 .PHONY: clean
 
-all: init.o main.o code_a.o code_b.o check_icode.o
+all: init.o main.o code_a.o code_b.o check_icode.o test.o
 
 clean:
 	rm -rf *~ *.o
 
 
 include ../include.mk
-
