--- a/user/Makefile
+++ b/user/Makefile
@@ -18,7 +18,7 @@ USERLIB := printf.o \
 CFLAGS += -nostdlib -static
 
 all: tltest.x tltest.b \
-	fktest.x fktest.b pingpong.x pingpong.b idle.x \
+	fktest.x fktest.b pingpong.x pingpong.b idle.x sigtest.b sigtest.x\
 	$(USERLIB) entry.o syscall_wrap.o
 
 %.x: %.b.c
