--- a/user/Makefile
+++ b/user/Makefile
@@ -20,7 +20,7 @@ USERLIB := printf.o \
 CFLAGS += -nostdlib -static
 
 all: tltest.x tltest.b \
-	teste.x teste.b counttest.x counttest.b detachtest.x detachtest.b exitjoin.x exitjoin.b pttest2.x pttest2.b \
+	semtest.x semtest.b teste.x teste.b counttest.x counttest.b detachtest.x detachtest.b exitjoin.x exitjoin.b pttest2.x pttest2.b \
 	testsem.x testsem.b cjjtest.x cjjtest.b ptjointest.x ptjointest.b ptcanceltest.x ptcanceltest.b pttest.x pttest.b ptexittest.x ptexittest.b \
 	fktest.x fktest.b pingpong.x pingpong.b idle.x \
 	$(USERLIB) entry.o syscall_wrap.o
